# geoclaw_rain

./: tc_surge_geoclaw.py
evaluation/evaluation/: .gitignore  README.md  pyproject.toml
evaluation/evaluation/gcvalid/compare/: gauge.py  hwm.py  maps.py
evaluation/evaluation/gcvalid/figures/: __init__.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig8.py  figs1.py  figs2.py  figs3.py  figs4.py  figs5.py  figs6.py  figs7.py
evaluation/evaluation/gcvalid/interactive/: __init__.py  compare_gauges.py  compare_stats.py  overview.py
evaluation/evaluation/gcvalid/plot/: __init__.py  bars_overview.py  common.py  gauge_record.py  maps.py  wmap_cdata.py  wmap_pies.py  wmap_tracks.py
evaluation/evaluation/gcvalid/prep/: elevation_global.py
evaluation/evaluation/gcvalid/prep/download/: dfo.py  fev.py  gfd.py  rapid.py  uhslc.py
evaluation/evaluation/gcvalid/prep/gauge/: annual_mean_altimetry.py  by_map.py  gc_locations.py  overlap.py  winds.py
evaluation/evaluation/gcvalid/prep/gc/: jobs.py  read_sl.py
evaluation/evaluation/gcvalid/sourcedata/: __init__.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig8.py  figs1.py  figs2.py  figs3.py  figs4.py  figs5.py  figs6.py  figs7.py  tabs1_3.py
evaluation/evaluation/gcvalid/tables/: tab1.py  tabs1_3.py  tabs4.py  tabs5.py  tabs6.py
evaluation/evaluation/gcvalid/util/: __init__.py  constants.py  gauge.py  io.py
evaluation/evaluation/notebooks/: compare_fes_codec.ipynb  compare_gauges.ipynb  compare_stats.ipynb  overview.ipynb  years_regions.ipynb
evaluation/evaluation/slurm/: run_script.sh
(+104 files in other folders)
