[project]
name = "gcvalid"
version = "1.0.0-beta"
authors = [
    { name="PIK", email="thomas.vogt@pik-potsdam.de" },
]
description = "Validate GeoClaw model outputs"
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "climada",
    "gsutil",
    "pyquery",
]

[project.urls]
"Homepage" = "https://gitlab.pik-potsdam.de/tovogt/dfo_validation"
"Bug Tracker" = "https://gitlab.pik-potsdam.de/tovogt/dfo_validation/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gcvalid"]
